Update menu parent

--- a/design_patterns/structural/structural_design_patterns.links.menu.yml
+++ b/design_patterns/structural/structural_design_patterns.links.menu.yml
@@ -2,5 +2,5 @@ structural_design_patterns.page:
   title: Structural Design Patterns Examples
   route_name: structural_design_patterns_page
   menu_name: design_patterns
-  parent: oop_design_patterns.page
+  parent: design_patterns.page
   weight: 300
